PhpParser.py
# Generated from PhpParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PhpParser ( Parser ):

    grammarFileName = "PhpParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<?php'", "'?>'", "'function'", "'if'", 
                     "'else'", "'elseif'", "'while'", "'do'", "'for'", "'foreach'", 
                     "'as'", "'switch'", "'case'", "'default'", "'break'", 
                     "'continue'", "'return'", "'echo'", "'unset'", "'try'", 
                     "'catch'", "'finally'", "'throw'", "'goto'", "'declare'", 
                     "'namespace'", "'use'", "'class'", "'interface'", "'trait'", 
                     "'extends'", "'implements'", "'abstract'", "'final'", 
                     "'array'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'.='", "'=>'", "'++'", "'--'", "'==='", "'!=='", "'=='", 
                     "'!='", "'<='", "'>='", "'<'", "'>'", "'&&'", "'||'", 
                     "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "';'", 
                     "','", "'.'", "':'", "'?'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'\\'", "'null'" ]

    symbolicNames = [ "<INVALID>", "PHPStart", "PHPEnd", "FUNCTION", "IF", 
                      "ELSE", "ELSEIF", "WHILE", "DO", "FOR", "FOREACH", 
                      "AS", "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", 
                      "RETURN", "ECHO", "UNSET", "TRY", "CATCH", "FINALLY", 
                      "THROW", "GOTO", "DECLARE", "NAMESPACE", "USE", "CLASS", 
                      "INTERFACE", "TRAIT", "EXTENDS", "IMPLEMENTS", "ABSTRACT", 
                      "FINAL", "ARRAY", "PlusAssign", "MinusAssign", "MultiplyAssign", 
                      "DivideAssign", "ModAssign", "DotAssign", "Arrow", 
                      "PlusPlus", "MinusMinus", "StrictEqual", "StrictNotEqual", 
                      "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
                      "Less", "Greater", "And", "Or", "Not", "Plus", "Minus", 
                      "Multiply", "Divide", "Mod", "Assign", "SemiColon", 
                      "Comma", "Dot", "Colon", "Question", "OpenParen", 
                      "CloseParen", "OpenCurly", "CloseCurly", "OpenSquare", 
                      "CloseSquare", "Backslash", "NULL", "Number", "StringLiteral", 
                      "Variable", "Identifier", "HashComment", "WhiteSpace", 
                      "LineComment", "BlockComment" ]

    RULE_id = 0
    RULE_phpBlock = 1
    RULE_topStatement = 2
    RULE_innerStatementList = 3
    RULE_innerStatement = 4
    RULE_namespaceDeclaration = 5
    RULE_useDeclaration = 6
    RULE_qualifiedName = 7
    RULE_statement = 8
    RULE_blockStatement = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_doWhileStatement = 12
    RULE_forStatement = 13
    RULE_forInit = 14
    RULE_forUpdate = 15
    RULE_foreachStatement = 16
    RULE_switchStatement = 17
    RULE_switchBlock = 18
    RULE_breakStatement = 19
    RULE_continueStatement = 20
    RULE_returnStatement = 21
    RULE_echoStatement = 22
    RULE_expressionStatement = 23
    RULE_unsetStatement = 24
    RULE_tryCatchFinally = 25
    RULE_catchClause = 26
    RULE_finallyClause = 27
    RULE_throwStatement = 28
    RULE_gotoStatement = 29
    RULE_declareStatement = 30
    RULE_emptyStatement = 31
    RULE_expressionList = 32
    RULE_expression = 33
    RULE_assignmentExpression = 34
    RULE_conditionalExpression = 35
    RULE_logicalOrExpression = 36
    RULE_logicalAndExpression = 37
    RULE_equalityExpression = 38
    RULE_concatExpression = 39
    RULE_relationalExpression = 40
    RULE_additiveExpression = 41
    RULE_multiplicativeExpression = 42
    RULE_unaryExpression = 43
    RULE_primaryExpression = 44
    RULE_arrayLiteral = 45
    RULE_arrayElements = 46
    RULE_arrayElement = 47
    RULE_functionDeclaration = 48
    RULE_parameterList = 49
    RULE_parameter = 50
    RULE_defaultExpr = 51
    RULE_typeSpecifier = 52
    RULE_classDeclaration = 53
    RULE_extendsClause = 54
    RULE_implementsClause = 55
    RULE_interfaceDeclaration = 56
    RULE_traitDeclaration = 57

    ruleNames =  [ "id", "phpBlock", "topStatement", "innerStatementList", 
                   "innerStatement", "namespaceDeclaration", "useDeclaration", 
                   "qualifiedName", "statement", "blockStatement", "ifStatement", 
                   "whileStatement", "doWhileStatement", "forStatement", 
                   "forInit", "forUpdate", "foreachStatement", "switchStatement", 
                   "switchBlock", "breakStatement", "continueStatement", 
                   "returnStatement", "echoStatement", "expressionStatement", 
                   "unsetStatement", "tryCatchFinally", "catchClause", "finallyClause", 
                   "throwStatement", "gotoStatement", "declareStatement", 
                   "emptyStatement", "expressionList", "expression", "assignmentExpression", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
                   "equalityExpression", "concatExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "primaryExpression", "arrayLiteral", "arrayElements", 
                   "arrayElement", "functionDeclaration", "parameterList", 
                   "parameter", "defaultExpr", "typeSpecifier", "classDeclaration", 
                   "extendsClause", "implementsClause", "interfaceDeclaration", 
                   "traitDeclaration" ]

    EOF = Token.EOF
    PHPStart=1
    PHPEnd=2
    FUNCTION=3
    IF=4
    ELSE=5
    ELSEIF=6
    WHILE=7
    DO=8
    FOR=9
    FOREACH=10
    AS=11
    SWITCH=12
    CASE=13
    DEFAULT=14
    BREAK=15
    CONTINUE=16
    RETURN=17
    ECHO=18
    UNSET=19
    TRY=20
    CATCH=21
    FINALLY=22
    THROW=23
    GOTO=24
    DECLARE=25
    NAMESPACE=26
    USE=27
    CLASS=28
    INTERFACE=29
    TRAIT=30
    EXTENDS=31
    IMPLEMENTS=32
    ABSTRACT=33
    FINAL=34
    ARRAY=35
    PlusAssign=36
    MinusAssign=37
    MultiplyAssign=38
    DivideAssign=39
    ModAssign=40
    DotAssign=41
    Arrow=42
    PlusPlus=43
    MinusMinus=44
    StrictEqual=45
    StrictNotEqual=46
    Equal=47
    NotEqual=48
    LessEqual=49
    GreaterEqual=50
    Less=51
    Greater=52
    And=53
    Or=54
    Not=55
    Plus=56
    Minus=57
    Multiply=58
    Divide=59
    Mod=60
    Assign=61
    SemiColon=62
    Comma=63
    Dot=64
    Colon=65
    Question=66
    OpenParen=67
    CloseParen=68
    OpenCurly=69
    CloseCurly=70
    OpenSquare=71
    CloseSquare=72
    Backslash=73
    NULL=74
    Number=75
    StringLiteral=76
    Variable=77
    Identifier=78
    HashComment=79
    WhiteSpace=80
    LineComment=81
    BlockComment=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(PhpParser.Identifier, 0)

        def getRuleIndex(self):
            return PhpParser.RULE_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)




    def id_(self):

        localctx = PhpParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PhpParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PhpBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PHPStart(self):
            return self.getToken(PhpParser.PHPStart, 0)

        def PHPEnd(self):
            return self.getToken(PhpParser.PHPEnd, 0)

        def EOF(self):
            return self.getToken(PhpParser.EOF, 0)

        def topStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.TopStatementContext)
            else:
                return self.getTypedRuleContext(PhpParser.TopStatementContext,i)


        def getRuleIndex(self):
            return PhpParser.RULE_phpBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPhpBlock" ):
                return visitor.visitPhpBlock(self)
            else:
                return visitor.visitChildren(self)




    def phpBlock(self):

        localctx = PhpParser.PhpBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_phpBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PhpParser.PHPStart)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4863887659830843288) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 3989) != 0):
                self.state = 119
                self.topStatement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(PhpParser.PHPEnd)
            self.state = 126
            self.match(PhpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespaceDeclaration(self):
            return self.getTypedRuleContext(PhpParser.NamespaceDeclarationContext,0)


        def useDeclaration(self):
            return self.getTypedRuleContext(PhpParser.UseDeclarationContext,0)


        def innerStatement(self):
            return self.getTypedRuleContext(PhpParser.InnerStatementContext,0)


        def getRuleIndex(self):
            return PhpParser.RULE_topStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopStatement" ):
                return visitor.visitTopStatement(self)
            else:
                return visitor.visitChildren(self)




    def topStatement(self):

        localctx = PhpParser.TopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_topStatement)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.namespaceDeclaration()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.useDeclaration()
                pass
            elif token in [3, 4, 7, 8, 9, 10, 12, 15, 16, 17, 18, 19, 20, 23, 24, 25, 28, 29, 30, 33, 34, 35, 55, 56, 57, 62, 67, 69, 71, 74, 75, 76, 77, 78]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.innerStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerStatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def innerStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.InnerStatementContext)
            else:
                return self.getTypedRuleContext(PhpParser.InnerStatementContext,i)


        def getRuleIndex(self):
            return PhpParser.RULE_innerStatementList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerStatementList" ):
                return visitor.visitInnerStatementList(self)
            else:
                return visitor.visitChildren(self)




    def innerStatementList(self):

        localctx = PhpParser.InnerStatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_innerStatementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4863887659629516696) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 3989) != 0):
                self.state = 133
                self.innerStatement()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(PhpParser.StatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(PhpParser.FunctionDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(PhpParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(PhpParser.InterfaceDeclarationContext,0)


        def traitDeclaration(self):
            return self.getTypedRuleContext(PhpParser.TraitDeclarationContext,0)


        def getRuleIndex(self):
            return PhpParser.RULE_innerStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerStatement" ):
                return visitor.visitInnerStatement(self)
            else:
                return visitor.visitChildren(self)




    def innerStatement(self):

        localctx = PhpParser.InnerStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_innerStatement)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 7, 8, 9, 10, 12, 15, 16, 17, 18, 19, 20, 23, 24, 25, 35, 55, 56, 57, 62, 67, 69, 71, 74, 75, 76, 77, 78]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.statement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.functionDeclaration()
                pass
            elif token in [28, 33, 34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.classDeclaration()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.interfaceDeclaration()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.traitDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(PhpParser.NAMESPACE, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(PhpParser.QualifiedNameContext,0)


        def SemiColon(self):
            return self.getToken(PhpParser.SemiColon, 0)

        def getRuleIndex(self):
            return PhpParser.RULE_namespaceDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespaceDeclaration" ):
                return visitor.visitNamespaceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def namespaceDeclaration(self):

        localctx = PhpParser.NamespaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_namespaceDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(PhpParser.NAMESPACE)
            self.state = 147
            self.qualifiedName()
            self.state = 148
            self.match(PhpParser.SemiColon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(PhpParser.USE, 0)

        def qualifiedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.QualifiedNameContext)
            else:
                return self.getTypedRuleContext(PhpParser.QualifiedNameContext,i)


        def SemiColon(self):
            return self.getToken(PhpParser.SemiColon, 0)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(PhpParser.Comma)
            else:
                return self.getToken(PhpParser.Comma, i)

        def getRuleIndex(self):
            return PhpParser.RULE_useDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseDeclaration" ):
                return visitor.visitUseDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def useDeclaration(self):

        localctx = PhpParser.UseDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_useDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(PhpParser.USE)
            self.state = 151
            self.qualifiedName()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==63:
                self.state = 152
                self.match(PhpParser.Comma)
                self.state = 153
                self.qualifiedName()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(PhpParser.SemiColon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.IdContext)
            else:
                return self.getTypedRuleContext(PhpParser.IdContext,i)


        def Backslash(self, i:int=None):
            if i is None:
                return self.getTokens(PhpParser.Backslash)
            else:
                return self.getToken(PhpParser.Backslash, i)

        def getRuleIndex(self):
            return PhpParser.RULE_qualifiedName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedName" ):
                return visitor.visitQualifiedName(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedName(self):

        localctx = PhpParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qualifiedName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.id_()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==73:
                self.state = 162
                self.match(PhpParser.Backslash)
                self.state = 163
                self.id_()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStatement(self):
            return self.getTypedRuleContext(PhpParser.BlockStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PhpParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(PhpParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(PhpParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(PhpParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(PhpParser.ForeachStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(PhpParser.SwitchStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(PhpParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(PhpParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(PhpParser.ReturnStatementContext,0)


        def echoStatement(self):
            return self.getTypedRuleContext(PhpParser.EchoStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(PhpParser.ExpressionStatementContext,0)


        def unsetStatement(self):
            return self.getTypedRuleContext(PhpParser.UnsetStatementContext,0)


        def tryCatchFinally(self):
            return self.getTypedRuleContext(PhpParser.TryCatchFinallyContext,0)


        def throwStatement(self):
            return self.getTypedRuleContext(PhpParser.ThrowStatementContext,0)


        def gotoStatement(self):
            return self.getTypedRuleContext(PhpParser.GotoStatementContext,0)


        def declareStatement(self):
            return self.getTypedRuleContext(PhpParser.DeclareStatementContext,0)


        def emptyStatement(self):
            return self.getTypedRuleContext(PhpParser.EmptyStatementContext,0)


        def getRuleIndex(self):
            return PhpParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PhpParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [69]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.blockStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.ifStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.whileStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 172
                self.doWhileStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 173
                self.forStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 174
                self.foreachStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 175
                self.switchStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 8)
                self.state = 176
                self.breakStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 9)
                self.state = 177
                self.continueStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 10)
                self.state = 178
                self.returnStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 11)
                self.state = 179
                self.echoStatement()
                pass
            elif token in [35, 55, 56, 57, 67, 71, 74, 75, 76, 77, 78]:
                self.enterOuterAlt(localctx, 12)
                self.state = 180
                self.expressionStatement()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 13)
                self.state = 181
                self.unsetStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 14)
                self.state = 182
                self.tryCatchFinally()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 15)
                self.state = 183
                self.throwStatement()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 16)
                self.state = 184
                self.gotoStatement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 17)
                self.state = 185
                self.declareStatement()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 18)
                self.state = 186
                self.emptyStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OpenCurly(self):
            return self.getToken(PhpParser.OpenCurly, 0)

        def innerStatementList(self):
            return self.getTypedRuleContext(PhpParser.InnerStatementListContext,0)


        def CloseCurly(self):
            return self.getToken(PhpParser.CloseCurly, 0)

        def getRuleIndex(self):
            return PhpParser.RULE_blockStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)




    def blockStatement(self):

        localctx = PhpParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(PhpParser.OpenCurly)
            self.state = 190
            self.innerStatementList()
            self.state = 191
            self.match(PhpParser.CloseCurly)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PhpParser.IF, 0)

        def OpenParen(self, i:int=None):
            if i is None:
                return self.getTokens(PhpParser.OpenParen)
            else:
                return self.getToken(PhpParser.OpenParen, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PhpParser.ExpressionContext,i)


        def CloseParen(self, i:int=None):
            if i is None:
                return self.getTokens(PhpParser.CloseParen)
            else:
                return self.getToken(PhpParser.CloseParen, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PhpParser.StatementContext)
            else:
                return self.getTypedRuleContext(PhpParser.StatementContext,i)


        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(PhpParser.ELSEIF)
            else:
                return self.getToken(PhpParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(PhpParser.ELSE, 0)

